# Entity_Component_System_Test

./: .gitignore  CMakeLists.txt  Chunk.cpp  Chunk.h  README.md  TypeIdGenerator.h  main.cpp  progressbar.hpp
CustomECS/: Archetype.cpp  Archetype.h  Block.h  ComponentManger.cpp  ComponentManger.h  ECS.cpp  ECS.h  Querie.cpp  Querie.h  Storage.cpp  Storage.h  Types.h  Utilites.h
ECS/: Archetype container.md  Archetype.md  Block.md  Entity.md  Registry.md
ECS/.obsidian/: graph.json  workspace
Entity_Component_System/: Alocator.h  Archetype.cpp  Archetype.h  ArchetypeContainer.cpp  ArchetypeContainer.h  Block.cpp  Block.h  Component.h  ECS.cpp  ECS.h  EntityManger.cpp  EntityManger.h  EntityPrefab.cpp  EntityPrefab.h  TypeIdGenerator.h  Utilites.h
